# tetris

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c  main.cpp
include/: blocks.h  maps.h
src/: maps.cpp  variables.cpp
